# squaredle-helper

./: README.md  pyproject.toml
.github/workflows/: daily_solve.yml
docs/: index.html  template.html
src/: squaredle_helper.py  squaredle_solver.py
