[project]
name = "squaredle-helper"
version = "0.1.0"
description = "Automated daily Squaredle puzzle helper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
squaredle-helper = "squaredle_helper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
